<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog">


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkboxsms"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/msg_editText"
        android:hint="@string/smstosend"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/changetogeneral"
        android:id="@+id/MissCallcount_editText"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/timetochange"
        android:id="@+id/timer_editText"
        android:layout_gravity="center_horizontal" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    >
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"

        android:id="@+id/OK"
        android:background="@drawable/customview"
       android:padding="10dp"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/customview"

        android:id="@+id/Cancel" />


</LinearLayout>


</LinearLayout>
